[package]
name = "bili_users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
tracing = { version = "0.1" ,features = ["log"]}
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
md5 = "0.7.0"
jsonpath-rust = "0.4.0"
rand = "0.8.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls" , "sqlite"] }
futures = "0.3.30"
base64ct = { version = "1.6.0", features = ["alloc"] }
hmac = "0.12.1"
sha2 = "0.10.8"
